--- a/WebContent/ShoppingCart.jspx
+++ b/WebContent/ShoppingCart.jspx
@@ -98,7 +98,10 @@ body {
 		<table>
 
 			<div class="w3-main" style="margin-left: 340px; margin-right: 40px">
-
+	<form name="logout" action="Start?currPage=logout" method="post"
+			onsubmit="Start?currPage=logout">
+			<div align="right"><button value="Logout">Logout</button></div>
+		</form>
 				<!-- Header -->
 			<!-- Header -->
 			<div class="w3-container" style="margin-top: 80px" id="showcase">
